--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,1 +1,13 @@
 <!-- Create your form here -->
+<h1>"Student Form"</h1>
+<form method="post" action="/students">
+ <p>
+    <label for="first_name" style="display: block;">First name:</label>
+    <input type="text" name="first_name" />
+ </p>
+ <p>
+ <label for="last_name" style="display: block;">Last name:</label>
+ <input type="text" name="last_name" />
+ </p> 
+ <input type="submit" value="Submit Student" />
+ </form>
